--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   },
   
   "dependencies" : { 
+    "googleapis" : "1.0.12",
     "q" : "1.0.1",
     "underscore" : "1.7.0",
+    "knex" : "0.6.22",
     "mysql" : "2.4.3",
     "socks5-https-client" : "0.2.2",
     "socks5-http-client" : "0.1.6",
